--- a/configs/common/application.yml
+++ b/configs/common/application.yml
@@ -48,7 +48,7 @@ management:
 
  zipkin:
    tracing:
-     endpoint: "http://localhost:9411/api/v2/spans" # Zipkin 수집 서버의 엔드포인트 URL을 입력합니다.
+     endpoint: "http://34.22.87.75:9500/api/v2/spans" # Zipkin 수집 서버의 엔드포인트 URL을 입력합니다.
  tracing:
    sampling:
      probability: 1.0
