--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -53,3 +53,10 @@ spring:
               uri: lb://chat-service
               predicates:
                 - Path=/v1/chats/**
+                
+            - id: chat-websocket
+              uri: lb:ws://chat-service  # ws:// 프로토콜 사용
+              predicates:
+                - Path=/ws/chat/**
+              filters:
+                - RewritePath=/ws/chat/(?<segment>.*), /$\{segment}
