--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -1,65 +1,61 @@
 spring:
   cloud:
     gateway:
-      server:
-        webflux:
-          discovery:
-            locator:
-              enabled: true
-              lower-case-service-id: true
-
-          routes:
-            - id: user-service
-              uri: lb://user-service
-              predicates:
-                - Path=/v1/user/**
-                
-            - id: promotion-service
-              uri: lb://promotion-service
-              predicates:
-                - Path=/v1/promotions/**
-
-            - id: point-service
-              uri: lb://point-service
-              predicates:
-                - Path=/v1/points/**
-
-            - id: notification-service
-              uri: lb://notification-service
-              predicates:
-                - Path=/v1/notifications/**
-                
-            - id: account-service
-              uri: lb://account-service
-              predicates:
-                - Path=/v1/account/**
-
-            - id: usergoal-service
-              uri: lb://usergoal-service
-              predicates:
-                - Path=/v1/usergoal/**
-
-            - id: payment-service
-              uri: lb://payment-service
-              predicates:
-                - Path=/v1/payments/**
-
-            - id: reservation-service
-              uri: lb://reservation-service
-              predicates:
-                - Path=/v1/reservations/**
-
-            - id: chat-service
-              uri: lb://chat-service
-              predicates:
-                - Path=/v1/chats/**
-                
-            - id: chat-websocket
-              uri: lb:ws://chat-service  # ws:// 프로토콜 사용
-              predicates:
-                - Path=/ws/chat/**
-
-# 디버깅용 로그 (문제 해결 후 제거 가능)
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+      routes:
+        - id: user-service
+          uri: lb://user-service
+          predicates:
+            - Path=/v1/user/**
+            
+        - id: promotion-service
+          uri: lb://promotion-service
+          predicates:
+            - Path=/v1/promotions/**
+            
+        - id: point-service
+          uri: lb://point-service
+          predicates:
+            - Path=/v1/points/**
+            
+        - id: notification-service
+          uri: lb://notification-service
+          predicates:
+            - Path=/v1/notifications/**
+            
+        - id: account-service
+          uri: lb://account-service
+          predicates:
+            - Path=/v1/account/**
+            
+        - id: usergoal-service
+          uri: lb://usergoal-service
+          predicates:
+            - Path=/v1/usergoal/**
+            
+        - id: payment-service
+          uri: lb://payment-service
+          predicates:
+            - Path=/v1/payments/**
+            
+        - id: reservation-service
+          uri: lb://reservation-service
+          predicates:
+            - Path=/v1/reservations/**
+            
+        - id: chat-service
+          uri: lb://chat-service
+          predicates:
+            - Path=/v1/chats/**
+            
+        - id: chat-websocket
+          uri: lb:ws://chat-service
+          predicates:
+            - Path=/ws/chat/**
+            
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
