--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -1,6 +1,20 @@
 spring:
   cloud:
     gateway:
+      # CORS 글로벌 설정 추가
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "*"  # 모든 도메인 허용
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowedHeaders: "*"
+            allowCredentials: false
+            maxAge: 3600
       server:
         webflux:
           discovery:
