--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -5,7 +5,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOrigins: "*"  # 모든 도메인 허용
+            allowedOriginPatterns: "*" # 모든 도메인 허용
             allowedMethods:
               - GET
               - POST
@@ -13,7 +13,7 @@ spring:
               - DELETE
               - OPTIONS
             allowedHeaders: "*"
-            allowCredentials: false
+            allowCredentials: true
             maxAge: 3600
       server:
         webflux:
