--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -2,6 +2,8 @@ spring:
   cloud:
     gateway:
       # CORS 글로벌 설정 추가
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_FIRST # cors 중복 헤더 제거
       globalcors:
         cors-configurations:
           '[/**]':
@@ -73,8 +75,6 @@ spring:
               uri: lb:ws://chat-service  # ws:// 프로토콜 사용
               predicates:
                 - Path=/chat-service/ws/chat/**,/ws/chat/** #SockJS 요청 고려
-              filters:
-                - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_FIRST # cors 중복 헤더 제거
                 
 # 디버깅용 로그 (문제 해결 후 제거 가능)
 logging:
