--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -8,15 +8,9 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOriginPatterns: "*" # 모든 도메인 허용
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
+            allowedMethods: "*"
             allowedHeaders: "*"
             allowCredentials: true
-            maxAge: 3600
       server:
         webflux:
           discovery:
