--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -69,6 +69,9 @@ spring:
               uri: lb:ws://chat-service  # ws:// 프로토콜 사용
               predicates:
                 - Path=/ws/chat/** #SockJS 요청 고려
+              filters:
+                - RemoveResponseHeader=Access-Control-Allow-Origin
+                - RemoveResponseHeader=Access-Control-Allow-Credentials
                 
 # 디버깅용 로그 (문제 해결 후 제거 가능)
 logging:
