--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -71,7 +71,8 @@ spring:
                 - Path=/ws/chat/** #SockJS 요청 고려
               filters:
                 - RemoveResponseHeader=Access-Control-Allow-Origin
-                - RemoveResponseHeader=Access-Control-Allow-Credentials
+                - AddResponseHeader=Access-Control-Allow-Origin, http://localhost:63342
+                - AddResponseHeader=Access-Control-Allow-Credentials, true
                 
 # 디버깅용 로그 (문제 해결 후 제거 가능)
 logging:
