--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -59,14 +59,10 @@ spring:
               predicates:
                 - Path=/v1/reservations/**
                 
-            - id: chat-info
+            - id: chat-sockjs
               uri: lb://chat-service
               predicates:
-                - Path=/ws/chat/info
-              filters:
-                - RemoveResponseHeader=Access-Control-Allow-Origin
-                - AddResponseHeader=Access-Control-Allow-Origin, http://localhost:63342
-                - AddResponseHeader=Access-Control-Allow-Credentials, true
+                - Path=/ws/chat/info/**
           
             - id: chat-service
               uri: lb://chat-service
@@ -76,11 +72,8 @@ spring:
             - id: chat-websocket
               uri: lb:ws://chat-service
               predicates:
-                - Path=/ws/chat/{segment}/**  # /info 제외
-              filters:
-                - RemoveResponseHeader=Access-Control-Allow-Origin
-                - AddResponseHeader=Access-Control-Allow-Origin, http://localhost:63342
-                - AddResponseHeader=Access-Control-Allow-Credentials, true
+                - Path=/ws/chat/**/websocket
+
                 
 # 디버깅용 로그 (문제 해결 후 제거 가능)
 logging:
