--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -1,25 +1,11 @@
 spring:
   cloud:
-    gateway:
-      # CORS 글로벌 설정
-      default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_FIRST
-      
-      globalcors:
-        cors-configurations:
-          '[/**]':
-            allowedOriginPatterns: "*"
-            allowedMethods: "*"
-            allowedHeaders: "*"
-            allowCredentials: true
-      
-      # discovery 설정 (선택사항)
+    gateway:      
       discovery:
         locator:
           enabled: true
           lower-case-service-id: true
-      
-      # routes는 gateway 바로 아래에
+          
       routes:
         - id: user-service
           uri: lb://user-service
@@ -74,7 +60,7 @@ spring:
         - id: chat-websocket
           uri: lb:ws://chat-service
           predicates:
-            - Path=/ws/chat/**
+            - Path=/ws/chat/*/*/websocket
 
 # 디버깅용 로그
 logging:
