--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -51,11 +51,14 @@ spring:
           uri: lb://chat-service
           predicates:
             - Path=/v1/chats/**
+            - Path=/ws/chat/**
+          filters:
+            - PreserveHostHeader
       
         - id: chat-websocket
           uri: lb:ws://chat-service
           predicates:
-            - Path=/ws/chat/**
+            - Path=/ws/chat/*/*/websocket
           filters:
             - PreserveHostHeader
 
