--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -1,6 +1,13 @@
 spring:
   cloud:
-    gateway:      
+    gateway:
+      globalcors:
+          corsConfigurations:
+            '[/**]':
+              allowedOrigins: "*"
+              allowedMethods: "*"
+              allowedHeaders: "*"
+              allowCredentials: true
       discovery:
         locator:
           enabled: true
