--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -6,7 +6,7 @@ spring:
         add-to-simple-url-handler-mapping: true
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "*"
+            allowedOriginPatterns: "*" 
             allowedMethods: "*"
             allowedHeaders: "*"
             allowCredentials: true
