--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -15,7 +15,10 @@ spring:
             maxAge: 3600
       # CORS 응답 헤더 중복 제거 필터
       default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_FIRST
+        - name: DedupeResponseHeader
+          args:
+            name: Access-Control-Allow-Origin Access-Control-Allow-Credentials
+            strategy: RETAIN_FIRST
 
       discovery:
         locator:
